# FinToyLab

./: .gitignore  LICENSE  README.md  Taskfile.yml  pyproject.toml  requirements.txt
.gitea/actions/deploy/: deploy.yml
.gitea/workflow/: test.yaml
.gitea/workflows/: deploy.yaml  run.yaml
.github/actions/deploy/: action.yml
.github/workflows/: code_check.yaml  run.yaml
data/: fincap.db
fincaplab/: main.py
fincaplab/common/: database_handler.py  logger.py
fincaplab/input/: akshare_adapter.py  akshare_read.py  collector.py
fintoylab/: main.py
fintoylab/common/: database_handler.py  logger.py
fintoylab/input/: collector.py
src/: main.py
src/common/: db.py  logger.py
src/input/: collector.py
tests/: test_collector.py  test_database_handler.py  test_db.py
